--- a/resources/views/auth/login.edge
+++ b/resources/views/auth/login.edge
@@ -1,4 +1,4 @@
-@layout('layouts/dashboard')
+@layout('layouts/authentication')
 
 @set('title', 'Authentication')
 
@@ -12,9 +12,10 @@
 <div class="min-full d-flex justify-content-center align-items-center">
   <div class="w-50">
     <h1 class="text-center mb-3">Authenticate</h1>
-    <div class="card">
+    <div class="card bg-dark shadow">
       <div class="card-body">
         <form action="{{ route('AuthController.login')}}" method="POST">
+          {{ csrfField() }}
           <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email address</label>
             <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp">
