--- a/resources/views/layouts/dashboard.edge
+++ b/resources/views/layouts/dashboard.edge
@@ -15,12 +15,14 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <meta name="turbo-cache-control" content="no-cache">
+
+  <script src="//unpkg.com/alpinejs" defer></script>
+
   @entryPointStyles('dashboard')
   @entryPointScripts('dashboard')
-
 </head>
 
-<body class="bg-dark text-white">
+<body class="bg-primary text-white">
 
   @include('partials/navbar')
 
