--- a/resources/scss/dashboard.scss
+++ b/resources/scss/dashboard.scss
@@ -9,9 +9,21 @@ body {
   min-height: 100vh;
 }
 
-.portfolio-item {
-  // max-height: 240px;
-  margin: 1.5rem 0 !important;
+.portfolio-card {
+  margin: 2.25rem 0 !important;
+  border-radius: $card-border;
+}
+
+@media only screen and (min-width: 992px) {
+  .portfolio-image {
+    border-radius: $card-border 0 0 $card-border;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .portfolio-image {
+    border-radius: $card-border $card-border 0 0;
+  }
 }
 
 .portfolio-image {
@@ -20,4 +32,31 @@ body {
 
 .btn:not(:last-child) {
   margin-right: 1rem;
+}
+
+.bg-primary {
+  background-color: $primary !important;
+}
+
+.bg-secondary {
+  background-color: $secondary !important;
+}
+
+.bg-tertiary {
+  background-color: $tertiary !important;
+}
+
+.bg-blue {
+  background-color: $blue;
+}
+
+.btn-primary {
+  background-color: $dark-blue;
+  border-color: $dark-blue;
+}
+
+.btn-info {
+  background-color: $blue;
+  border-color: $blue;
+  color: #fff;
 }
