--- a/resources/views/dashboard/portfolio/index.edge
+++ b/resources/views/dashboard/portfolio/index.edge
@@ -7,15 +7,16 @@
 
 <div class="row container mx-auto mt-5">
     @each(item in items)
-    <div class="card portfolio-item d-block d-lg-flex p-0 border-0 flex-row bg-secondary">
-        <div class="col-12 col-lg-4"><img src="{{item.image}}" alt="item image" class="img-fluid portfolio-image"></div>
-        <div class="col-12 col-lg-8 p-3 position-relative">
+    <div class="card portfolio-card d-block d-lg-flex p-0 border-0 flex-row bg-secondary">
+        <div class="col-12 col-lg-4"><img src="{{item.image}}" alt="{{item.name}}" class="img-fluid portfolio-image">
+        </div>
+        <div class="col-12 col-lg-8 p-3 ">
             <h4>
                 {{item.name}}
             </h4>
             <p>{{item.about}}</p>
 
-            <div class="d-flex justify-content-end">
+            <div class="d-flex justify-content-end ">
                 <a class="btn btn-info" href="/dashboard/edit/{{item.id}}">Edit</a>
                 <a class="btn btn-primary" href="{{item.url}}" target="_blank">Goto</a>
             </div>
